<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ritz.myecom.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="371dp"
        android:layout_height="202dp"
        android:layout_marginLeft="10dp"
        android:text="@string/welcome"
        android:textColor="#32053e"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="3dp" />

    <Button
        android:id="@+id/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/SignIn"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="50dp" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/SignUp"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="245dp"/>

    <Button
        android:id="@+id/SkipForNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/Skip"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="125dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Or"
        android:textColor="#32053e"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        tools:text="@string/Or"
        android:layout_below="@+id/SignUp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
