<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ritz.myecom.ProductActivity">

    <android.support.v7.widget.CardView
        android:layout_width="360dp"
        android:layout_height="470dp"
        tools:layout_editor_absoluteY="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="183dp"
            app:srcCompat="@drawable/handy" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="183dp"
            android:text="@string/Sample"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:layout_marginTop="225dp"
            android:text="@string/Description"
            android:textSize="25sp" />


    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/divert"
        android:layout_width="365dp"
        android:layout_height="40dp"
        android:background="#3dee10"
        android:text="@string/BuyNow"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="470dp" />
</RelativeLayout>
