<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ritz.myecom.RegisterActivity">

    <EditText
        android:id="@+id/Name"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:hint="Name"
        android:inputType="textPersonName"
        android:text="@string/N"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/takepass"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/Email" />

    <EditText
        android:id="@+id/repass"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/takepass"
        android:layout_alignStart="@+id/takepass" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_alignLeft="@+id/gbutton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Or"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_above="@+id/gbutton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Submit"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        android:layout_above="@+id/textView4"
        android:layout_alignParentEnd="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/gbutton"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Name"
        android:layout_below="@+id/Name"
        android:inputType="textEmailAddress"
        tools:text="Email"
        android:layout_alignParentStart="true" />
</RelativeLayout>
